--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.2.1",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "normalize.css": "^8.0.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
